--- a/package.json
+++ b/package.json
@@ -32,5 +32,18 @@
     "tailwindcss": "^3",
     "three": "^0.157.0",
     "typescript": "^5"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Nareshcybersecurity/portfolio.github.io.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Nareshcybersecurity/portfolio.github.io/issues"
+  },
+  "homepage": "https://github.com/Nareshcybersecurity/portfolio.github.io#readme"
 }
